[gd_scene load_steps=3 format=3 uid="uid://bno0or3q58up0"]

[ext_resource type="Script" uid="uid://rbcrpbkunv4k" path="res://root_scene.gd" id="1_itajj"]
[ext_resource type="Texture2D" uid="uid://b1dyqr3in2n24" path="res://assets/sidebar64.png" id="2_c77vg"]

[node name="RootScene" type="Node2D"]
script = ExtResource("1_itajj")

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="SidebarToggle" type="TextureButton" parent="UI_Layer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_c77vg")

[connection signal="pressed" from="UI_Layer/SidebarToggle" to="." method="_on_sidebar_toggle_pressed"]
