extends Node2D

var mdi_window_scene = preload("res://mdi_window.tscn")
var terminal_scene = preload("res://terminal_ui.tscn")
var networkmap_scene = preload("res://NetworkMapUI.tscn")
var sidebar_scene = preload("res://Sidebar.tscn")
var mission_select_scene = preload("res://MissionSelectUI.tscn")

# é–‹ã„ã¦ã„ã‚‹ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ç®¡ç†ã™ã‚‹è¾æ›¸ï¼ˆé‡è¤‡é˜²æ­¢ç”¨ï¼‰
var open_windows: Dictionary = {}

# MDIã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é…ç½®ã™ã‚‹ãƒãƒ¼ãƒ‰ã¸ã®å‚ç…§
@onready var mdi_area = $UI_Layer/MainUIContainer/MainHBox/MDI_Area 
# ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã‚’åˆ¶å¾¡ã™ã‚‹ãƒãƒ¼ãƒ‰ (SidebarContainerã®å­ã¨ã—ã¦è¿½åŠ ã™ã‚‹ã®ãŒãƒ™ã‚¹ãƒˆ)
@onready var animator = $UI_Layer/MainUIContainer/AnimationPlayer # RootSceneã«AnimationPlayerãƒãƒ¼ãƒ‰ã‚’è¿½åŠ 

@onready var sidebar_toggle = $UI_Layer/SidebarToggle
var sidebar_instance: Control = null # <--- Sidebarã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã‚’ä¿æŒã™ã‚‹å¤‰æ•°

# ã‚µã‚¤ãƒ‰ãƒãƒ¼ã®å¹…ã¨ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³æ™‚é–“ã‚’ã“ã“ã§å®šæ•°ã¨ã—ã¦å®šç¾©ã—ã€sidebar.gdã¨åŒæœŸã•ã›ã‚‹
const SIDEBAR_WIDTH = Global.SIDEBAR_WIDTH
const TWEEN_DURATION = Global.TWEEN_DURATION

var sidebar_expanded: bool = false
const COLLAPSED_WIDTH = 20.0
const EXPANDED_WIDTH = 150.0 # å±•é–‹å¾Œã®å¹…

func _ready():

	# èµ·å‹•æ™‚ã«ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‹ã
	#open_window("Terminal", terminal_scene)

	# ğŸ’¡ è¿½è¨˜: èµ·å‹•æ™‚ã«ãƒãƒƒãƒ—ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‹ã (MDIã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã¨ã—ã¦)
	# ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ã¨ä½ç½®ã‚’ãšã‚‰ã—ã¦ã€ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé‡ãªã‚‰ãªã„ã‚ˆã†ã«ã™ã‚‹
	#open_window("Network Map", networkmap_scene, Vector2(600, 100))

	# ğŸ’¡ è¿½è¨˜: èµ·å‹•æ™‚ã«ãƒŸãƒƒã‚·ãƒ§ãƒ³é¸æŠç”»é¢ã‚’é–‹ã
	open_mission_select_ui()

	### ã‚µã‚¤ãƒ‰ãƒãƒ¼ã‚’è¡¨ç¤ºã™ã‚‹
	#var sidebar_ui = sidebar_scene.instantiate()
	#$UI_Layer.add_child(sidebar_ui) 
	#sidebar_instance = sidebar_ui
	
	#set_mission_mode("initial")

# ãƒŸãƒƒã‚·ãƒ§ãƒ³é¸æŠUIã‚’é–‹ãé–¢æ•°
func open_mission_select_ui():
	var select_ui = mission_select_scene.instantiate()
	$UI_Layer.add_child(select_ui) 
	# select_ui.set_anchors_preset(Control.PRESET_FULL_RECT) # MissionSelectUI.gdã§è¨­å®šæ¸ˆã¿

# ãƒŸãƒƒã‚·ãƒ§ãƒ³é–‹å§‹é–¢æ•°
func start_mission(mission_id: String):
	# 1. MissionManagerã‹ã‚‰ãƒŸãƒƒã‚·ãƒ§ãƒ³ãƒ‡ãƒ¼ã‚¿ã‚’å–å¾—
	var mission_data = MissionManager.get_mission_data(mission_id)
	
	if mission_data.is_empty():
		print("Error: Failed to load data for mission: ", mission_id)
		return

	# 2. æ—¢å­˜ã®é–‹ã„ã¦ã„ã‚‹ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’å…¨ã¦é–‰ã˜ã‚‹ (ã‚ªãƒ—ã‚·ãƒ§ãƒ³)
	for id in open_windows.keys():
		if is_instance_valid(open_windows[id]):
			open_windows[id].queue_free()
	open_windows.clear()
	
	# 3. å¿…è¦ãªåˆæœŸã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‹ã (ä¾‹: Terminalã¯å¿…é ˆ)
	open_window("Terminal", terminal_scene)
	
	# 4. ã‚µã‚¤ãƒ‰ãƒãƒ¼ã®æ©Ÿèƒ½ã‚„ãƒãƒƒãƒˆãƒ¯ãƒ¼ã‚¯ãƒãƒƒãƒ—ã®åˆæœŸãƒ­ãƒ¼ãƒ‰å‡¦ç†ï¼ˆä»Šå¾Œã®å®Ÿè£…ï¼‰
	# set_mission_mode(mission_id)
	
	# 5. UIã«ãƒŸãƒƒã‚·ãƒ§ãƒ³ã‚¿ã‚¤ãƒˆãƒ«ã‚„ç›®æ¨™ã‚’è¡¨ç¤ºã™ã‚‹å‡¦ç†ï¼ˆä»Šå¾Œã®å®Ÿè£…ï¼‰
	print("Mission Started: ", mission_data.get("title"))

# ğŸ’¡ ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‹ãæ±ç”¨é–¢æ•°
func open_window(window_id: String, content_scene: PackedScene, initial_position: Vector2 = Vector2(50, 50)):
	if open_windows.has(window_id) and is_instance_valid(open_windows[window_id]):
		# ã™ã§ã«é–‹ã„ã¦ã„ã‚‹å ´åˆã¯æœ€å‰é¢ã«ç§»å‹•ã—ã¦çµ‚äº†
		open_windows[window_id].grab_focus()
		return
	
	var mdi_window = mdi_window_scene.instantiate()
	#self.add_child(mdi_window) # RootSceneã®å­ã¨ã—ã¦è¿½åŠ 
	# UI_Layerã®å­ä¾›ã¨ã—ã¦è¿½åŠ ã™ã‚‹
	$UI_Layer.add_child(mdi_window)
	
	mdi_window.position = initial_position
	
	# åˆæœŸåŒ–
	mdi_window.initialize(window_id, content_scene)
	open_windows[window_id] = mdi_window
	
	# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‰ã˜ã‚‰ã‚ŒãŸæ™‚ã®å‡¦ç†ã‚’è¨­å®š
	mdi_window.close_requested.connect(Callable(self, "_on_window_closed").bind(window_id))

	# ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ãŒèµ·å‹•ã—ãŸå ´åˆã¯ãƒ•ã‚©ãƒ¼ã‚«ã‚¹ã‚’è¨­å®š
	if window_id == "Terminal" and mdi_window.has_node("ContentContainer/TerminalUI"):
		var term = mdi_window.get_node("ContentContainer/TerminalUI")
		if term.has_node("InputLine"):
			term.get_node("InputLine").grab_focus()

	# ãƒãƒƒãƒ—ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‹ã‹ã‚ŒãŸã‚‰ãƒ­ãƒ¼ãƒ‰å‡¦ç†ã‚’å‘¼ã³å‡ºã™
	if window_id == "Network Map":
		# MDIWindow -> ContentContainer -> NetworkMapUI -> NetworkMap ã¸ã®ãƒ‘ã‚¹ã‚’è¾¿ã‚‹
		var network_map_ui = mdi_window.get_node("ContentContainer").get_child(0) # ContentContainerã®å­ã¯ NetworkMapUI ã®ã¯ãš
		var network_manager = network_map_ui.find_child("NetworkMap")
		
		if is_instance_valid(network_manager):
			# ğŸš¨ ãƒ†ã‚¹ãƒˆã®ãŸã‚ã€ãƒ‘ã‚¹ã‚’ 'res://' ã«å¤‰æ›´ã™ã‚‹ã“ã¨ã‚’æ¨å¥¨ã—ã¾ã™
			network_manager.load_mission("res://missions/mission_01.json")

func _on_window_closed(window_id):
	# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‰ã˜ã‚‰ã‚ŒãŸã‚‰ç®¡ç†ãƒªã‚¹ãƒˆã‹ã‚‰å‰Šé™¤
	open_windows.erase(window_id)

# 

func _on_sidebar_toggle_pressed() -> void:
	if not is_instance_valid(sidebar_instance):
		return

	# 1. sidebar_instanceã®é–‹é–‰ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã‚’é–‹å§‹ã—ã€æ–°ã—ã„çŠ¶æ…‹ï¼ˆis_open_nowï¼‰ã‚’å–å¾—
	var is_open_now = sidebar_instance.toggle_sidebar() 
	
	# 2. ãƒˆã‚°ãƒ«ãƒœã‚¿ãƒ³ã‚’ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã•ã›ã‚‹ãŸã‚ã®Tweenã‚’ä½œæˆ
	var tween = create_tween()
	
	# 3. ç›®æ¨™ä½ç½®ã‚’è¨ˆç®—
	# é–‰ã˜ã‚‹æ™‚ï¼ˆfalseï¼‰: X=0 (ç”»é¢ç«¯)
	# é–‹ãæ™‚ï¼ˆtrueï¼‰: X=SIDEBAR_WIDTH (100.0)
	var target_x = SIDEBAR_WIDTH if is_open_now else 0.0
	
	# 4. sidebar_toggleãƒãƒ¼ãƒ‰ã®Xåº§æ¨™ã‚’ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³
	tween.tween_property(sidebar_toggle, "position", Vector2(target_x, sidebar_toggle.position.y), TWEEN_DURATION)\
		.set_trans(Tween.TRANS_QUAD)\
		.set_ease(Tween.EASE_OUT)
